--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "version": "2.3.1",
     "license": "GPL-3.0-only",
     "require": {
+        "php": "~7.1.0|~7.2.0|~7.3.0|~7.4.0|~8.0.0|~8.1.0|~8.2.0|~8.3.0|~8.4.0",
         "magento/module-customer": "^103.0"
     },
     "support": {
